style.css
* {
  margin: 0;
  padding: 0;
}

html{
  background-color: #f9f4ef;
  font-family: Tahoma, san-serif;
  font-size: 16px;
  color: #020826;
}

h1{
  color: #18acc2;
  font-transform: uppercase;
  letter-spacing: 2rem;
}

